--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Shift Calendar View",
   "version": "1.0",
   "description": "Transforms shift table into a calendar view",
   "icons": {
     "48": "icons/icon.png"
   },
-  "permissions": [
+  "host_permissions": [
     "https://edm.meduniwien.ac.at/*"
   ],
   "content_scripts": [
