--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
   "content_scripts": [
     {
       "matches": ["https://edm.meduniwien.ac.at/dienstplan.php*"],
-      "js": ["scripts/shiftCalendar.js", "scripts/shiftCalendarPlugin.js"]
+      "js": ["scripts/shiftCalendar.js", "scripts/shiftCalendarPlugin.js"],
+      "css": ["styles/calendar.css"]
     }
   ]
 } 
