Hide calendar page before formatting is finished

--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,8 @@
     {
       "matches": ["https://edm.meduniwien.ac.at/dienstplan.php*"],
       "js": ["scripts/shiftCalendar.js", "scripts/controllers.js","scripts/shiftCalendarPlugin.js"],
-      "css": ["styles/purpleCalendarTheme.css"]
+      "css": ["styles/preloadHide.css", "styles/purpleCalendarTheme.css"],
+      "run_at": "document_start"
     },
     {
       "matches": ["https://edm.meduniwien.ac.at/*"],
