--- a/.github/workflows/package-extension.yml
+++ b/.github/workflows/package-extension.yml
@@ -4,6 +4,8 @@ on:
   push:
     tags:
       - 'v*'  # Triggers on version tags like v1.0.0
+permissions:
+  contents: write
 
 jobs:
   build-and-zip:
